# The__Magnificent__Four

./: .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  runCommand.sh
core/: asgi.py  celery.py  routing.py  settings.py  tasks.py  urls.py
home/: admin.py  apps.py  consumers.py  models.py  routing.py  signals.py  views.py
home/migrations/: 0001_initial.py
templates/: index.html
