[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["HormatHamidov <hamidovhormat@coders.edu.az>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
amqp = "5.2.0"
asgiref = "3.8.1"
attrs = "24.2.0"
autobahn = "24.4.2"
automat = "22.10.0"
billiard = "4.2.0"
celery = "5.4.0"
cffi = "1.17.0"
channels = "4.1.0"
channels-redis = "4.2.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
constantly = "23.10.4"
cryptography = "43.0.0"
daphne = "4.1.2"
django = "5.1"
hyperlink = "21.0.0"
idna = "3.7"
incremental = "24.7.2"
kombu = "5.4.0"
msgpack = "1.0.8"
prompt-toolkit = "3.0.47"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycparser = "2.22"
pyopenssl = "24.2.1"
python-dateutil = "2.9.0.post0"
redis = "5.0.8"
service-identity = "24.1.0"
setuptools = "72.1.0"
six = "1.16.0"
sqlparse = "0.5.1"
twisted = "24.3.0"
txaio = "23.1.1"
typing-extensions = "4.12.2"
tzdata = "2024.1"
vine = "5.1.0"
wcwidth = "0.2.13"
zope-interface = "7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
